--- a/index.html
+++ b/index.html
@@ -70,5 +70,15 @@
     </div>
 
   </section>
+
+  <section class="get-update">
+    <h1>Get My Updates</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam quia libero rerum esse rem nemo cumque laborum quas. Non alias facere consequatur assumenda provident rem placeat delectus dolores ut iste.</p>
+    <div>
+      <input type="email" placeholder="Email">
+      <input type="button" value="Subscribe">
+    </div>
+
+  </section>
 </body>
 </html>
