--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
   <section class="section-three">
     <div>
       <h3>Their lives depend on
-        your donation</h3>
+        </h3>
+        <h3>your donation</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos a iste repudiandae labore, expedita error temporibus quas reiciendis unde nam quis iure sapiente! Sequi fuga, provident alias aliquid cumque ex.</p>
         <a href="#">How to Contribute?</a>
     </div>
@@ -73,12 +74,17 @@
 
   <section class="get-update">
     <h1>Get My Updates</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam quia libero rerum esse rem nemo cumque laborum quas. Non alias facere consequatur assumenda provident rem placeat delectus dolores ut iste.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam quia libero rerum  rem placeat delectus dolores ut iste.</p>
     <div>
       <input type="email" placeholder="Email">
       <input type="button" value="Subscribe">
     </div>
 
   </section>
+
+
+  <footer>
+    <P>	&copy;2022 All rights reserved by SIK tanzid</P>
+  </footer>
 </body>
 </html>
