--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
   <header>
+    <!-- HEADER SECTION START-->
 
     <div id="center">
       <h1>Let's Help Those Who Are</h1>
@@ -21,7 +22,9 @@
       <a href="#donate">Donate Now</a> 
     </div>
   </header>
+  <!-- HEADER SECTION END -->
 
+  <!-- FIRST SECTION START -->
   <section class="first-sec">
     <h2>donate today</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et illum ea consequuntur recusandae, aliquam error autem, culpa sed sequi velit assumenda voluptate minus incidunt distinctio!</p>
@@ -33,7 +36,9 @@
       </form>
   </section>
 
+<!-- FIRST SECTION END --> 
 
+<!-- SECOND SECTION START -->
   <section class="second-sec">
     <h1>Our Donate Plan</h1>
     <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo nobis aliquid exercitationem consequatur ducimus culpa consectetur eius numquam. Tenetur et fugiat tempora illum</p>
@@ -55,9 +60,10 @@
       </div>
     </div>
   </section>
+  <!-- SECOND SECTION END -->
   
 
-
+<!-- THARD SECTION START -->
   <section class="section-three">
     <div>
       <h3>Their lives depend on
@@ -71,7 +77,9 @@
     </div>
 
   </section>
+  <!-- THARD SECTION END -->
 
+  <!-- GET-UPDATE SECTION START -->
   <section class="get-update">
     <h1>Get My Updates</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam quia libero rerum  rem placeat delectus dolores ut iste.</p>
@@ -81,6 +89,7 @@
     </div>
 
   </section>
+  <!-- GET-UPDATE SECTION END -->
 
 
   <footer>
