--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
   <!-- FIRST SECTION START -->
   <section class="first-sec">
-    <h2>donate today</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et illum ea consequuntur recusandae, aliquam error autem, culpa sed sequi velit assumenda voluptate minus incidunt distinctio!</p>
+    <h2>Donate Today</h2>
+    <p>Technical guidance. Be aware of suspect donations - advice for charities. Charity fundraising: a guide to trustee duties Complaints about charities</p>
     <div class="flex"><span>100tk</span><span id="border">200tk</span><span>500tk</span><span>1000tk</span>
       <span>5000tk</span></div>
       <form action="">
@@ -41,7 +41,7 @@
 <!-- SECOND SECTION START -->
   <section class="second-sec">
     <h1>Our Donate Plan</h1>
-    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo nobis aliquid exercitationem consequatur ducimus culpa consectetur eius numquam. Tenetur et fugiat tempora illum</p>
+    <p class="paragraph">Givelify is the most widely-used charitable donation platform for nonprofits. Easily manage and track donations with without the hassle. </p>
     <div class="flex">
       <div class="flex-sec one">
         <img src="donate-today-main/icons/food.png" alt="">
@@ -69,7 +69,7 @@
       <h3>Their lives depend on
         </h3>
         <h3>your donation</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos a iste repudiandae labore, expedita error temporibus quas reiciendis unde nam quis iure sapiente! Sequi fuga, provident alias aliquid cumque ex.</p>
+        <p>All-women rugby team respond to typhoon. ChildFund Australia is an independent international development organisation that works to reduce poverty for children in developing communities.</p>
         <a href="#">How to Contribute?</a>
     </div>
     <div class="image-section">
@@ -82,7 +82,7 @@
   <!-- GET-UPDATE SECTION START -->
   <section class="get-update">
     <h1>Get My Updates</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam quia libero rerum  rem placeat delectus dolores ut iste.</p>
+    <p>Get Results for Usa Charity Organizations. Find Quick Results from Multiple Sources. Search for Usa Charity Organizations and Discover Millions of Results. Fast and trusted. </p>
     <div>
       <input type="email" placeholder="Email">
       <input type="button" value="Subscribe">
